
2003-12-23	Joel Becker <joel.becker@oracle.com>

	* configure.in: Bump to 0.10.1.
	* vendor/redhat/Makefile: Add oracleasm-userspace.spec.in to
		DIST_FILES.

2003-12-23	Joel Becker <joel.becker@oracle.com>

	* Tagging 0.10.0.

2003-12-23	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add documents subdir.
	* documents/Makefile: Added.
	* documents/asm-install.txt: Fix a couple names.
	* include/Makefile: osmlib.h -> asmlib.h.
	* include/linux/asmabi.h: osmlib.h -> asmlib.h.
	* include/linux/asmcompat32.h: osmlib.h -> asmlib.h.
	* include/linux/asmkernel.h: osmlib.h -> asmlib.h.
	* vendor/common/oracleasm.init.functions: Move to asmscan.
	* vendor/redhat/oracleasm-userspace.spec.in: Add asmscan.
	* vendor/redhat/oracleasm-2.4.9-e.spec.in: Add asmscan.
	* vendor/redhat/oracleasm-2.4.21-EL.spec.in: Add asmscan.
	* vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec.in: Add
		asmscan.
	* vendor/unitedlinux/oracleasm-2.4.19-4GB-SMP-304.spec.in: Add
		asmscan.
	* vendor/unitedlinux/oracleasm-2.4.19-64GB-SMP-304.spec.in: Add
		asmscan.
	* vendor/unitedlinux/oracleasm-2.4.21-107.spec.in: Add asmscan.
	* vendor/unitedlinux/oracleasm-2.4.21-111.spec.in: Add asmscan.
	* vendor/unitedlinux/oracleasm-2.4.21-138.spec.in: Add asmscan.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* tools/asmscan.c: Scanning workie.
	* tools/asmtool.c: Some changes for scanning.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* vendor/*/*.spec.in: OSM -> ASM.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* test/asm{bad,profile,test,test-multi}.c: OSM -> ASM.
	* test/sizes.c: OSM -> ASM.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* tools/Makefile: OSM -> ASM.
	* tools/asmscan.c: osmlib.h -> asmlib.h.
	* tools/asmtool.c: osmlib.h -> asmlib.h.
	* test/Makefile: OSM -> ASM.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* libasm/asmlib.c: OSM -> ASM rename.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* lib{osm,asm}: Move libosm to libasm.