@@ -313,7 +313,10 @@ case "$1" in
             exit 1
         fi
         make_disk "$2" "$3"
-        if_fail $? "Unable to create disk \"$2\""
+        if [ $? = 1 ]
+        then
+            if_fail 1 "Unable to create disk \"$2\""
+        fi
         perm_disk "${ORACLE_ASMMANAGER}/disks/$2"
         if_fail $? "Unable to change ownership of disk \"$2\""
         ;;
@@ -321,7 +324,7 @@ case "$1" in
     deletedisk)
         if [ -z "$2" ]
         then
-            echo "Action \"unmarkdisk\" requires an argument" >&2
+            echo "Action \"deletedisk\" requires an argument" >&2
             exit 1
         fi
         remove_disk "$2"
@@ -355,7 +358,7 @@ case "$1" in
 	;;
 
     *)
-	echo "Usage: $0 {start|stop|restart|link|enable|disable|configure|markdisk|unmarkdisk|checkdisk|scandisks|status}"
+	echo "Usage: $0 {start|stop|restart|link|enable|disable|configure|createdisk|deletedisk|querydisk|listdisks|scandisks|status}"
         exit 1
 esac
 
